# stanford_cs336_hw6

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  test_and_make_submission.sh
artifacts/runs/qwen25_05b_gsm8k_question_only_256_smoke/: config.json  metrics.jsonl
artifacts/runs/qwen25_05b_gsm8k_question_only_384_g4_smoke/: config.json  metrics.jsonl
artifacts/runs/qwen25_05b_r1_zero_standard_50s_lr1e-6/: config.json  (+1 more)
cs336_alignment/: checkpoint.py  grpo.py  modal_utils.py  vllm_utils.py
cs336_alignment/prompts/: question_only.prompt  r1_zero_three_shot_gsm8k.prompt
scripts/: run_grpo_experiment.py
tests/: adapters.py  conftest.py  test_dpo.py  test_grpo.py  test_sft.py
tests/_snapshots/: test_aggregate_loss_across_microbatch_constant.npz  test_aggregate_loss_across_microbatch_sequence.npz  test_compute_group_normalized_rewards_drgrpo.npz  test_compute_group_normalized_rewards_grpo.npz  test_compute_group_normalized_rewards_maxrl.npz  test_compute_policy_gradient_loss_off_policy.npz  test_compute_policy_gradient_loss_off_policy_gspo.npz  test_compute_policy_gradient_loss_on_policy.npz  test_compute_rollout_rewards.npz  test_get_response_log_probs.npz  test_grpo_train_step_off_policy[grpo].npz  test_grpo_train_step_off_policy[gspo].npz  test_grpo_train_step_off_policy[noclip].npz  test_grpo_train_step_standard_on_policy.npz  test_grpo_train_step_variants_on_policy[dr_grpo].npz  test_grpo_train_step_variants_on_policy[grpo_constant].npz  test_grpo_train_step_variants_on_policy[maxrl].npz  test_grpo_train_step_variants_on_policy[rft].npz  test_tokenize_prompt_and_output.npz
(+12 files in other folders)
